--- a/QuranTilawat/app/src/main/res/values/strings.xml
+++ b/QuranTilawat/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">QuranTilawat</string>
+    <string name="surats">Surats</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_quran_detail">QuranDetailActivity</string>
     <string name="Mediplayer_Pause_Button">Pause</string>
